# ocaml-crud

./: .gitignore  README.md  docker-compose.yaml  dune  dune-project  dune-workspace  env.example  init.sql  ocaml_crud.opam
front/: .gitignore  Index.re  dune  dune-project  index.html  package-lock.json  package.json  vite.config.mjs
front/components/: Counter.re  Login.re  Todo.re  dune
front/components/hooks/: UseTodo.re  UseValidateForm.re  dune
lib/: db.ml  db.mli  dune  tasks.ml  tasks.mli  user.ml  user.mli
test/: dune  test_ocaml_crud.ml
